# geophysics-forward-plotting

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  README_zh.md  environment.yml  pyproject.toml
.clinerules/: geophysics-forward-plotting.md
.cursor/rules/: geophysics-forward-plotting.mdc
.github/: copilot-instructions.md
.github/instructions/: geophysics-forward-plotting.instructions.md
.github/workflows/: ci.yml
.roo/rules/: geophysics-forward-plotting.md
.windsurf/rules/: geophysics-forward-plotting.md
docs/: agent-skills.md  architecture.md  conventions.md  install.md  quickstart.md
examples/configs/: compare_4methods.yaml  error_map.yaml  performance.yaml  shot_record.yaml  sliceviewer.yaml  velocity_model.yaml  volume_3d.yaml  wavefield_snapshot.yaml  wiggle.yaml
examples/data/: method_a.npy  method_b.npy  method_c.npy  method_coarse.npy  method_d.npy  method_deepwave.npy  method_fd_coarse.npy  method_perturbed.npy  method_smooth.npy  perf.json  shot_record.npy  shot_record_src1.npy  shot_smooth.npy  snap_200ms.npy  snap_500ms.npy  snap_750ms.npy  velocity_model.npy  volume_3d.npy  wavefield_snapshot.npy
examples/scripts/: demo_compare_4methods.py  demo_error_map.py  demo_full_workflow.py  demo_method_evaluation.py  demo_performance.py  demo_shot_record.py  demo_sliceviewer.py  (+6 more)
scripts/: manage_agent_skills.py
tests/: test_agent.py  test_agent_skills.py  test_cigvis_backend.py  test_cigvis_skills.py  test_cli.py  test_compare_skill.py  test_data_inspector.py  test_error_map_skill.py  test_figure_review.py  test_io.py  test_models.py  test_performance_skill.py  test_registry.py  test_shot_record_skill.py  test_velocity_model_skill.py  test_wavefield_snapshot_skill.py  test_wiggle_skill.py
(+81 files in other folders)
