[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "geophysics-forward-plotting"
version = "0.1.0"
description = "CIGVis-first agent and skills framework for publication-grade geophysical forward-modeling figures"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "geophysics-forward-plotting contributors" }]
keywords = ["geophysics", "seismic", "visualization", "cigvis", "forward-modeling"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
  "numpy>=1.24",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
cigvis = ["cigvis"]
plot = ["matplotlib>=3.7"]
cli = ["typer>=0.12"]
full = ["cigvis", "matplotlib>=3.7", "numpy>=1.24", "PyYAML>=6.0", "typer>=0.12"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[project.scripts]
gfp = "geophysics_forward_plotting.cli.main:app"

[project.urls]
"CIGVis Repository" = "https://github.com/JintaoLee-Roger/cigvis"
"CIGVis Gallery" = "https://cigvis.readthedocs.io/en/latest/gallery/index.html"

[tool.hatch.build.targets.wheel]
packages = ["src/geophysics_forward_plotting"]

[tool.hatch.build.targets.wheel.force-include]
"skills" = "geophysics_forward_plotting/_agent_skills"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
